--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url="https://github.com/TooFiveFive">
+<meta http-equiv="refresh" content="0; url=https://github.com/TooFiveFive">
 <link rel="canonical" href="https://github.com/TooFiveFive" />
 </head>
 <body>
